# a2a-demos

./: .env.example  .gitignore  .ruff.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/crewai-agent/: README.md  main.py  requirements.txt
agents/langchain-agent/: README.md  main.py  requirements.txt
agents/langgraph-agent/: README.md  main.py  requirements.txt
demo-one/: .env.example  README.md  requirements.txt  run_demo.py  setup.sh
demo-one/agents/: trusted_agent.py  untrusted_agent.py
demo-one/server/: main.py
demo-two/: .env.example  README.md  requirements.txt  run_demo.py  setup.sh
demo-two/agents/: trusted_agent.py  untrusted_agent.py
demo-two/policies/: baseline.yaml  lockdown.yaml  selective.yaml
demo-two/scripts/: setup_policies.py
demo-two/server/: main.py
mcp-demo/: .env.example  README.md  docker-compose.yml
mcp-demo/client/: main.py  requirements.txt
mcp-demo/server/: .env.example  main.py  requirements.txt
scripts/: demo_driver.py  run-agents.sh  setup.sh
shared/: README.md  pyproject.toml
shared/capiscio_events/: __init__.py  emitter.py  types.py
